add span error registery and class alert red

--- a/css/style_registery.css
+++ b/css/style_registery.css
@@ -88,3 +88,10 @@ body {
     font-size: 40px;
     
 }
+
+.alert-red {
+    display: none;
+    padding-top: 10px;
+    font-size: 13px;
+    color: red;
+}
