Comments for Messenger Page

--- a/css/Messenger.css
+++ b/css/Messenger.css
@@ -3,17 +3,23 @@ body {
 }
 
 .container {
-
+/* از دیسپلی گرید برای این استفاده کردم چون سیستم دو بعدی و کار کردن باهاش راحته و بهتر میشه مدیریت کرد لی اوت رو  */
     display: grid;
+    /* background-color: red; */
     width: 80%;
+    /* مارجین چپ و راست رو اتو گذاشتم بیاد وسط و از بالا گفتم پنجاه پیکسل فاصله بگیره و عرضشم گذاشتم هشتاد درصد پدرش ک بادی هست باشه  */
     margin: 50px auto;
+    /* اینجا من یک فراگمنت برای ستون اول و ستون دوم رو سه فراگمنت انتخاب کردم چون ب نسبت همدیگه وقتی صفحه بزرگ کوچیک میشه انعطاف داشته باشه و ستون دومی سه برابر ستون اولی باشه  */
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr  4fr 1fr;
+    /* اینجا بجای گپ سطر و ستون از پروپرتی خود گپ استفاده کردم  و پنح پیکسل بین سطر و ستون فاصله دادم  */
     gap: 5px;
 }
 
 .contact{
+    /* یک رنگ پس زمینه برای شروع کار درست کردم ک هر المنت مشخص باشه کدوم جایگاه رو داره  */
     background-color:#ffd32a ;
+    /* اینجا گفتم از ستون 2 تا ستون 3 و از سطر یک تا سطر 2 رو بگیره  */
     grid-column: 2/3;
     grid-row: 1/2;
 }
@@ -36,6 +42,7 @@ body {
     grid-column: 2/3;
     grid-row: 3/4;
 }
+/* کلاس کاستوم دادم برای اینکه بتونم دیو هام رو بصورت کلی ویژگی های مشترکش رو اعمال  */
 .customItem {
     border-radius: 30px;
     padding: 10px;
