--- a/css/styleForms.css
+++ b/css/styleForms.css
@@ -1,7 +1,7 @@
 *{
-    
     /* اینجا به کل المنت های صفحه برای اضافه نشدن به سایز باکس هام بخاطر پدینگ و مارجین روی حالت بوردر باکس میذارم  */
     box-sizing: border-box;
+  /* پدینگ و مارجین پیش فرض رو ازش گرفتم و اصطلاحا ریست کردم سی اس اس شو  */
     padding: 0;
     margin: 0;
 }
@@ -9,7 +9,7 @@
 body { 
     /* ی فونت برای بادی انتخاب کردم ک بقیه ازش ارث ببرن و اگه سیستمی اون فونت رو نداشته باشه از پیش فرض های بعدی استفاده کنه   */
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
-
+/* ی عکس با ادرس بهش دادم و سایزشو رو کاور دادم ک کل صفحه رو بپوشونه و رپیتشو غیرفعال کردم و حداقل ارتفاع رو گذاشتم کل ارتفاع صفحه دید کاربر  */
     background-image: url(../img/green-leaf-texture-leaf-texture-background.jpg);
     background-size:cover ;
     background-repeat: no-repeat;
@@ -20,17 +20,15 @@ body {
     width: 90%;
     /* background-color: red; */
     /* مارجین چپ و راست اتو دادم ک مثل بازوی اهرم از کنار هل بدن بیان وسط */
+    /* و مارجین بالا و پایین ده پیکسلی دادم بهش برای زیبایی کار  */
     margin: 10px auto;
-    /* مارجین تاپ دادم ک از بالای صفحه فاصله داشته باشه */
-    /* margin-top: 10px; */
 }
 
 .form {
 /* ویدس فرمم 400 پیکسل بیشتر نیاز نبود  */
-    width: 380px;
-/* بکگراند فرمم سفید گذاشتم ک با رنگ بادی خودشو بیشتر نشون بده */
+    width: 400px;
+ /* تصویر زمینه سفید دادم و از حالت خاص ار جی بی ای استفاده کردم ک بتونم کم حالت کنم برای دیدن تصویر زیریش  */
     background-color: rgba(255, 255, 255, 0.8);
-    
 /* فونت سایز 1.5 رم انتخاب کردم ک هرچی فونت سایز بادی بود 1.5 برابر بیشتر باشه */
     font-size: 1.5rem;
     /* فونت وید فرمم رو بولد کردم چون عنوان هاش مهمن */
@@ -40,13 +38,13 @@ body {
     flex-direction: column;
     /* تکس الاین رو سنتر گذاشتم چون جهت اصلی صفحه راست ب چپ و من اینجا میخوام تکس هام وسط چین باشن */
     text-align: center;
-/* پدینگ 40پیکسل گذاشتم ک محتوای فرمم از اطراف فاصله بگیرن و چون دسیپلی فلکس هست فلکس شیرینک المنت ها کار میکنه و ب نسبت هم همه رو یکسان عرضشون رو کم میکنه */
+/* پدینگ 20پیکسل گذاشتم ک محتوای فرمم از اطراف فاصله بگیرن و چون دسیپلی فلکس هست فلکس شیرینک المنت ها کار میکنه و ب نسبت هم همه رو یکسان عرضشون رو کم میکنه */
     padding: 20px;
     /* مارجین اتو دادم ک نسبت به کانتینر بیاد وسط */
     margin: auto;
     /* بوردر ردیوس 40پیکسل دادم ک اطراف فرمم انحنا داشته باشه */
     border-radius: 40px;
-/* ی بورد دو پیکسلی سفید با درجه روشنی دو دهم دادم ک شبیه شیشه بشه کناره هاش فرمم  */
+/* ی بورد دو پیکسلی سفید با درجه روشنی دو دهم دادم برای ظریف کاری و زیبایی بیشتر  */
     border: 2px rgba(255, 255, 255, 0.2) solid;
     
 }
@@ -65,6 +63,7 @@ body {
     border-radius: 40px;
     /* متن داخل اینپوت رو وسط چین گذاشتم حس کردم قشنگ تره */
     text-align: center;
+    /* اینجا هم مثل بالا اینپوت هارو برای زیبایی بیشتر رنگ زمینه رو با حالت کمرنگ و بوردر سفید با کم حالتی یک دهم گذاشتم برای زیبایی  */
     background-color: rgba(255, 255, 255,0.6);
     border: 2px rgba(255, 255, 255, 0.1) solid;
 }
@@ -76,16 +75,22 @@ body {
 .btn_blue {
     /* برای اومدن علامت دست رو دکمه  */
     cursor:pointer;
+    /* بکگراند ابی برای دکمه  */
     background-color:#3742fa;
+    /* رنگ متن دکمه رو سفید گذاشتم  */
     color:rgb(255, 255, 255);
+    /* انحنای دکمه باتن رو تنظیم کردم  */
     border-radius: 25px;
+    /* سایزش برای دکمه مناسب بود  */
     font-size: 25px;
+    /* فاصله متن دکمه از بوردر دکمه رو  تنظیم کردم  */
     padding: 6px;
+    /* بورد دکمه رو سفید کم حالت گذاشتم برای زیبایی  */
     border: 1px rgba(255, 255, 255, 0.2) solid;
 }
 
 .form a {
-    /* لینک رو اندرلاینش رو حذف کردم چون تو پیش فرض استایلش بود و رنگشم اب روشن تر گذاشتم */
+    /* لینک رو اندرلاینش رو حذف کردم چون تو پیش فرض استایلش بود و رنگشم ابی خاص گذاشتم */
     text-decoration: none;
     color:rgb(33, 0, 223);
 }
@@ -97,7 +102,10 @@ body {
 }
 /* کلاس الرت درست کردم برای رنگ پیغام های خطا برنامم  */
 .alert-red {
+    /* گفتم از بالا با المنت ده پیکسل فاصله بگیره  */
     padding-top: 10px;
+    /* سایز فونت رو سیزده پیکسل دادم  */
     font-size: 13px;
-    color: rgba(255, 10, 10, 0.8)
+/* رنگ قرمز برای متن الرتم انتخاب کردم  */
+    color: rgb(213, 20, 3)
 }
